--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,87 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  font-family:Ubuntu;
+  background-color: black;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.title{
+  text-align: center;
+  color: white;
+
+}
+.img{
+  width: 50%;
+  margin-left: 27%;
+  margin-top: 20px;
+ 
+}
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&family=Ubuntu&display=swap');
+.main{
+  border-style:solid;
+  border: none;
+  box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
+  border-radius: 5px;
+  width: 50%;
+  margin-top: 5%;
+  margin-left: 25%;
+  margin-bottom: 5%;
+  background-color: white;
+  
+}
+.content{
+  text-align: center;
+}
+
+.btn{
+
+  background-color:black;
+  color:white;
+  height:40px;
+  width:40%;
+  margin-left: 31%;
+  margin-bottom: 14px;
+  cursor:pointer;
+  font-family: Ubuntu;
+  font-size: 15px;
+  transition : opacity 0.15s ;
+
+}
+.btn:hover{
+
+  opacity: 0.8;
+}
+.btn:active{
+
+  opacity: 0.5;
+}
+.refresh{
+  text-align: center;
+}
+
+
+.refreshbtn{
+
+  background-color:white;
+  color:black;
+  height:37px;
+  width:100px;
+  border:none;
+  border-radius:3px;
+  font-family: Ubuntu;
+  font-size: 14px;
+  font-weight: bold;
+  cursor:pointer;
+  transition: background-color 0.15s;
+}
+.refreshbtn:hover{
+
+  opacity: 0.5;
+ 
+}
+.refreshbtn:active{
+
+  opacity:0.7;
+}
+.noproducts{
+  color: white;
 }
